--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,5 +14,11 @@
       "matches": ["https://*.kick.com/*"]
     }
   ],
-  "action": {}
+  "action": {},
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
