--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
