--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build-extension": "pnpm run build && cp src/manifest.json dist/",
+    "build-extension": "pnpm run build && xcopy src\\manifest.json dist\\",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.237",
