--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -18,10 +18,10 @@ jobs:
         run: |
           FILES_CHANGED=$(git diff --name-only ${{ github.base_sha }}...${{ github.head_sha }})
 
-          if echo "$FILES_CHANGED" | grep -q 'manifest\.json'; then
-            CURRENT_VERSION=$(jq -r .version manifest.json)
+          if echo "$FILES_CHANGED" | grep -q 'src/manifest\.json'; then
+            CURRENT_VERSION=$(jq -r .version src/manifest.json)
 
-            if git diff --unified=0 ${{ github.base_sha }}...${{ github.head_sha }} 'manifest.json' | grep -qE "^\+.*\"version\": \"$CURRENT_VERSION\","; then
+            if git diff --unified=0 ${{ github.base_sha }}...${{ github.head_sha }} 'src/manifest.json' | grep -qE "^\+.*\"version\": \"$CURRENT_VERSION\","; then
               echo "Version line in manifest.json has been changed."
             else
               echo "Version line in manifest.json has not been changed."
