--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -21,7 +21,7 @@ jobs:
           if echo "$FILES_CHANGED" | grep -q 'src/manifest\.json'; then
             CURRENT_VERSION=$(jq -r .version src/manifest.json)
 
-            if git diff --unified=0 ${{ github.base_sha }}...${{ github.head_sha }} 'src/manifest.json' | grep -qE "^\+.*\"version\": \"$CURRENT_VERSION\","; then
+            if git diff --unified=0 ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} 'src/manifest.json' | grep -qE "^\+.*\"version\": \"$CURRENT_VERSION\","; then
               echo "Version line in manifest.json has not been changed."
             else
               echo "Version line in manifest.json has been changed."
