--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -13,21 +13,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
 
       - name: Check for version change in manifest.json
         run: |
-           FILES_CHANGED=$(git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }})
+          FILES_CHANGED=$(git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }})
 
           if echo "$FILES_CHANGED" | grep -q 'src/manifest\.json'; then
             CURRENT_VERSION=$(jq -r .version src/manifest.json)
 
             if git diff --unified=0 ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} 'src/manifest.json' | grep -qE "^\+.*\"version\": \"$CURRENT_VERSION\","; then
-              echo "Version line in manifest.json has not been changed."
+              echo "Version line in src/manifest.json has been changed."
             else
-              echo "Version line in manifest.json has been changed."
+              echo "Version line in src/manifest.json has not been changed."
               exit 1
             fi
           else
-            echo "manifest.json has not been changed."
+            echo "src/manifest.json has not been changed."
             exit 1
           fi
