--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "word-wrap": "1.2.4"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.237",
