--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
-    "word-wrap": "1.2.4"
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.237",
