fix: 🪱 force unfied styles file name

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["content_script.js", "globals.css"],
+      "resources": ["content_script.js", "kk_styles.css"],
       "matches": ["https://*.kick.com/*"]
     }
   ],
