--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Extension for Kick to enhance the experience with some utilities.",
   "host_permissions": ["*://*.kick.com/*"],
-  "permissions": ["tabs", "activeTab", "scripting", "webNavigation"],
+  "permissions": ["tabs", "scripting"],
   "background": {
     "service_worker": "background.js"
   },
