chore: 🤖 run build workflow for master only

--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -2,6 +2,9 @@ name: Build and Package Vite Application
 
 on:
   push:
+    branches:
+      - 'master'
+
 jobs:
   build:
     runs-on: ubuntu-latest
