--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -27,9 +27,11 @@ jobs:
       - name: Build extension
         run: pnpm run build-extension
 
-      - name: Get version from manifest.json
+      - name: Extract version from manifest.json
         id: get_version
-        run: echo "::set-output name=version::$(node -e \"console.log(require('./src/manifest.json').version)\")"
+        run: |
+          version=$(node -p "require('./src/manifest.json').version")
+          echo "version=${version}" >> $GITHUB_ENV
 
       - name: Generate random artifact ID
         id: generate_artifact_id
